# opengl

./: .gitignore  .gitmodules  CMakeLists.txt
Triangles/: CMakeLists.txt
Triangles/shaders/: triangles.frag
Triangles/src/: main.cpp
common/: CMakeLists.txt
common/include/common/: LoadShaders.h
common/src/: LoadShaders.cpp
uniform_variables/: CMakeLists.txt
uniform_variables/shaders/: shader.frag  shader.vert
uniform_variables/src/: main.cpp
